# pycode

./: .flake8  .gitignore  .pre-commit-config-extended.yaml  .pre-commit-config.yaml  Makefile  README.md  demo_cli.py  demo_interactive.py  install.sh  pyproject.toml  pytest.ini  quick_setup.py  requirements.txt  run_tests.py  setup_venv.sh
.github/workflows/: ci.yml
data/test_cases/: 0001.two_sum.toml  0002.add_two_numbers.toml  0003.longest-substring.toml  0004.median-of-two-sorted-arrays.toml  0015.3sum.toml  0030.substr_concat.toml  0042.trapping_rain.toml  0238.prd_of_array.toml  0336.palindrome_pairs.toml  0560.subarray_sum_k.toml
docs/: CLI_USAGE_GUIDE.md  FILENAME_CONVENTION.md  FINAL_SUMMARY.md  INTERACTIVE_FEATURES.md  PYTHON_HUSKY_EQUIVALENTS.md  README.md  REFACTORING_SUMMARY.md  REORGANIZATION_SUMMARY.md  SETUP_GUIDE.md
dsa/: pyvenv.cfg
dsa_practice/: __init__.py  cli.py
tests/unit/: test_two_sum.py
tools/timeout_detector/: __init__.py  timeout_detector.py
utils/: base_solution.py
utils/benchmarking/: __init__.py  performance_analyzer.py
utils/testing/: test_runner.py
